# catkin_ws

.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin
devel/.private/art_tracker/: .catkin  .rosinstall  local_setup.sh
devel/.private/assisted_teleop/: .catkin  .rosinstall  local_setup.sh
devel/.private/azure_kinect_ros_driver/: .catkin
devel/.private/cartographer_ros/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/cartographer_ros_msgs/: .catkin  .rosinstall  local_setup.sh
devel/.private/cartographer_rviz/: .catkin  .rosinstall  local_setup.sh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/cob_sick_s300/: .catkin  .rosinstall
devel/.private/drive_mode_switch/: .catkin  setup.sh
devel/.private/dunker_ethercat_interface/: .catkin  .rosinstall  setup.sh
devel/.private/ekf_pose/: .catkin  .rosinstall  local_setup.sh
devel/.private/ethercat_grant/: .catkin  .rosinstall  local_setup.sh
devel/.private/fiducial_navigation/: .catkin
devel/.private/fiducial_tracker/: .catkin
devel/.private/goal_passer/: .catkin  .rosinstall  setup.sh
devel/.private/icp_localization/: .catkin  .rosinstall
devel/.private/imu_complementary_filter/: .catkin  setup.sh
devel/.private/imu_filter_madgwick/: .catkin  .rosinstall  local_setup.sh
devel/.private/imu_tools/: .catkin  local_setup.sh  setup.sh
devel/.private/ira_laser_tools/: .catkin  local_setup.sh
devel/.private/laser_odometry/: .catkin  .rosinstall  local_setup.sh
devel/.private/laser_odometry_core/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/laser_odometry_node/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/laser_scan_matcher/: .catkin  local_setup.sh
devel/.private/leg_detector/: .catkin  local_setup.sh
devel/.private/libpointmatcher/: .catkin  local_setup.sh  setup.sh
devel/.private/message_logger/: .catkin
devel/.private/navigation_experimental/: .catkin  local_setup.sh  setup.sh
devel/.private/neo_kinematics_mecanum/: .catkin  local_setup.sh
devel/.private/ogm2pgbm/: .catkin  setup.sh
devel/.private/online_verification/: .catkin  setup.sh
devel/.private/pb_code_tracker/: .catkin  .rosinstall  local_setup.sh
devel/.private/pcl_people_detector/: .catkin  .rosinstall  local_setup.sh
devel/.private/people/: .catkin  local_setup.sh
devel/.private/people_msgs/: .catkin  .rosinstall  setup.sh
devel/.private/people_tracking_filter/: .catkin
devel/.private/people_velocity_tracker/: .catkin  .rosinstall  setup.sh
devel/.private/pointmatcher_ros/: .catkin  local_setup.sh
devel/.private/pose_base_controller/: .catkin  .rosinstall  setup.sh
devel/.private/pose_follower/: .catkin  .rosinstall  local_setup.sh
devel/.private/project2/: .catkin  .rosinstall  local_setup.sh
devel/.private/robot_localization/: .catkin  (+2 more)
logs/assisted_teleop/: build.make.000.log.stderr
logs/ekf_pose/: build.make.004.log.stderr
logs/fiducial_navigation/: build.make.004.log.stderr
logs/fiducial_tracker/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/icp_localization/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/ira_laser_tools/: build.make.000.log.stderr
logs/laser_scan_matcher/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/libpointmatcher/: build.make.000.log.stderr
logs/pcl_people_detector/: build.cmake.000.log.stderr
logs/pointmatcher_ros/: build.make.000.log.stderr
logs/project2/: build.check.012.log.stderr
logs/robot_localization/: build.cmake.001.log.stderr
logs/rwth_ground_hog/: build.cmake.000.log.stderr
logs/tug_neo_locate_station/: build.make.000.log.stderr
src/: .rosinstall  .rosinstall.bak
src/art_tracker/: CMakeLists.txt  readme.md
src/art_tracker/files/: tf_comparison 1.xlsx  tf_comparison 2.xlsx  tf_comparison 3.xlsx
src/art_tracker/launch/: art_tracker.launch
src/art_tracker/rviz/: rviz.rviz
src/art_tracker/src/: art_tracker_node.cpp  get_offset.py  tf_publisher.cpp
src/ekf_pose/: CMakeLists.txt
src/fiducial_navigation/: CMakeLists.txt
src/fiducial_navigation/files/: .~lock.amcl_pose_06111528.xlsx#  31_10_poses.csv  amcl_pose_06111527.xlsx  amcl_pose_06111528.xlsx  amcl_pose_09011658.xlsx  amcl_pose_12011317.xlsx  amcl_pose_15011125.xlsx  amcl_pose_15011128.xlsx  amcl_pose_15011130.xlsx  amcl_pose_15011132.xlsx  amcl_pose_15011134.xlsx  amcl_pose_15011135.xlsx  amcl_pose_15011137.xlsx  amcl_pose_15011145.xlsx  amcl_pose_15011419.xlsx  amcl_pose_15011422.xlsx  amcl_pose_15011425.xlsx  amcl_pose_15011429.xlsx  amcl_pose_15011432.xlsx  amcl_pose_15011434.xlsx  amcl_pose_15011435.xlsx  amcl_pose_15011517.xlsx  amcl_pose_15011519.xlsx  amcl_pose_15011521.xlsx  amcl_pose_15011524.xlsx  amcl_pose_15011525.xlsx  amcl_pose_15011528.xlsx  amcl_pose_15011530.xlsx  amcl_pose_15011548.xlsx  amcl_pose_15011550.xlsx  amcl_pose_15011551.xlsx  amcl_pose_15011553.xlsx  amcl_pose_15011555.xlsx  amcl_pose_15011557.xlsx  amcl_pose_15011558.xlsx  amcl_pose_15011707.xlsx  amcl_pose_15011709.xlsx  amcl_pose_15011711.xlsx  amcl_pose_15011712.xlsx  amcl_pose_15011714.xlsx  (+5 more)
src/fiducial_navigation/include/fiducial_navigation/: FiducialNavigation.hpp
src/fiducial_navigation/launch/: compute_localization_error.launch  fiducial_navigation.launch
src/fiducial_navigation/rviz/: rviz_config.rviz
src/fiducial_navigation/src/: compute_localization_error.py  fiducial_navigation_node.cpp
src/fiducial_navigation/src/fiducial_navigation/: FiducialNavigation.cpp
src/fiducial_tracker/: CMakeLists.txt  Readme.md
src/fiducial_tracker/files/: tf_comparison center.xlsx  tf_comparison left.xlsx  tf_comparison right 2.xlsx  tf_comparison right.xlsx  tf_comparison.xlsx
src/fiducial_tracker/include/fiducial_tracker/: ArucoTracker.hpp
src/fiducial_tracker/launch/: aruco_tracker.launch
src/fiducial_tracker/src/: aruco_tracker_node.cpp  get_offset.py
src/fiducial_tracker/src/aruco_tracker/: ArucoTracker.cpp
src/pb_code_tracker/: CMakeLists.txt  package.xml  rviz.conf.rviz
src/stop_robot/: CMakeLists.txt
src/testing_cartographer/: readme.md
(+1634 files in other folders)
